# scraping_wgcompany

./: .env  .gitignore  README.md  license.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: send_email.yml  test_and_lint_python.yml
