[tool.poetry]
name = "scraping_wgcompany"
version = "0.1.0"
description = "scraping_wgcompany scrapes the newest WG-entries on wgcompany.de and emails them to a given email address."
authors = ["Andreas Hechler <info@andreashechler.com>"]
license = "MIT"

[tool.poetry.dependencies]
chromedriver-autoinstaller = "^0.4.0"
chromedriver-py = "^106.0.5249"
dateparser = "^1.1.1"
# TODO: python-dotenv + License.md erstellen (add file --> license --> choose)
python = "^3.10"
python-dotenv = "^0.21.0"
selenium = "^4.5.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
