[tool.poetry]
name = "scraping_wgcompany"
version = "0.1.1"
description = "scraping_wgcompany scrapes the newest WG-entries on wgcompany.de and emails them to a given email address."
authors = ["Andreas Hechler <info@andreashechler.com>"]
license = "MIT"

[tool.poetry.dependencies]
chromedriver-autoinstaller = "^0.6.3"
chromedriver-py = "^120.0.6099.71"
dateparser = "^1.2.0"
python = "^3.11"
python-dotenv = "^1.0.0"
selenium = "^4.16"
webdriver_manager = "^4.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
